# measure-anses-neighboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  analyze.ipynb  download_alpha  download_alpha_data  filter_hitlist.py  main.py  make_trace.py  output.txt  plot.ipynb  rust-toolchain.toml
data_alpha/: 2024_6_19_20_20.csv  2024_6_19_20_25.csv  2024_6_19_20_35.csv  2024_6_19_20_50.csv  2024_6_19_20_55.csv  2024_6_19_21_0.csv  2024_6_19_21_15.csv  2024_6_19_21_25.csv  2024_6_19_21_45.csv  2024_6_19_21_5.csv  2024_6_19_21_55.csv  2024_6_19_22_0.csv  2024_6_19_22_10.csv  2024_6_19_22_15.csv  2024_6_19_22_45.csv  2024_6_19_22_50.csv  2024_6_19_23_15.csv  2024_6_19_23_5.csv  2024_6_19_23_50.csv  2024_6_20_0_0.csv  2024_6_20_0_20.csv  2024_6_20_0_25.csv  2024_6_20_0_35.csv  2024_6_20_0_5.csv  2024_6_20_0_55.csv  2024_6_20_10_10.csv  2024_6_20_10_15.csv  2024_6_20_10_25.csv  2024_6_20_10_40.csv  2024_6_20_10_50.csv  2024_6_20_11_0.csv  2024_6_20_11_10.csv  2024_6_20_11_20.csv  2024_6_20_11_25.csv  2024_6_20_11_50.csv  2024_6_20_12_10.csv  2024_6_20_12_15.csv  2024_6_20_12_20.csv  2024_6_20_12_25.csv  2024_6_20_12_35.csv  (+388 more)
data_alpha_1sec/: 2024_6_20_15_29_38.csv  2024_6_20_15_29_39.csv  2024_6_20_15_29_40.csv  2024_6_20_15_29_41.csv  2024_6_20_15_29_42.csv  2024_6_20_15_29_44.csv  2024_6_20_15_29_45.csv  2024_6_20_15_29_46.csv  2024_6_20_15_29_47.csv  2024_6_20_15_29_48.csv  2024_6_20_15_29_49.csv  2024_6_20_15_29_50.csv  2024_6_20_15_29_51.csv  2024_6_20_15_29_52.csv  2024_6_20_15_29_53.csv  2024_6_20_15_29_54.csv  2024_6_20_15_29_55.csv  2024_6_20_15_29_56.csv  (+373 more)
src/: echo.rs  (+2 more)
(+522 files in other folders)
