[package]
name = "tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
fern = "0.6.2"
humantime = "2.1.0"
indicatif = "0.17.8"
log = "0.4.21"
pnet = "0.35.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = { version = "1.0.203", features = ["alloc", "derive"] }
serde_with = "3.8.1"
